--- a/src/templates/base.html.jinja
+++ b/src/templates/base.html.jinja
@@ -27,49 +27,21 @@
 
         <v-btn 
             text
-            href="/projects"
+            href="/project"
             class="hidden-sm-and-down"
             color="grey darken-2">
             <v-icon left>mdi-folder-open</v-icon>
             Projects
         </v-btn>
 
-        <v-btn 
-            text
-            href="/datasets"
-            class="hidden-sm-and-down"
-            color="grey darken-2">
-            <v-icon left>mdi-chart-box</v-icon>
-            Datasets
-        </v-btn>
-
-        <v-btn 
-            text
-            href="/collections"
-            class="hidden-sm-and-down"
-            color="grey darken-2">
-            <v-icon left>mdi-file-cabinet</v-icon>
-            Collections
-        </v-btn>
-
-        <v-btn 
-            text
-            href="/samples"
-            class="hidden-sm-and-down"
-            color="grey darken-2">
-            <v-icon left>mdi-test-tube</v-icon>
-            Samples
-        </v-btn>
-
         <v-divider vertical class="hidden-sm-and-down"></v-divider>
 
         <v-btn 
             text
-            href="/templates"
             class="hidden-sm-and-down"
             color="grey darken-2">
             <v-icon left>mdi-cog</v-icon>
-            Templates
+            Settings
         </v-btn>
 
         <v-app-bar-nav-icon 
@@ -86,37 +58,22 @@
             nav
             dense>
             <v-list-item-group color="primary">
-                <v-list-item href="/projects">
+
+                <v-list-item href="/project">
                     <v-list-item-icon>
                         <v-icon>mdi-folder-open</v-icon>
                     </v-list-item-icon>
                     <v-list-item-title>Projects</v-list-item-title>
                 </v-list-item>
-                <v-list-item href="/datasets">
-                    <v-list-item-icon>
-                        <v-icon>mdi-chart-box</v-icon>
-                    </v-list-item-icon>
-                    <v-list-item-title>Datasets</v-list-item-title>
-                </v-list-item>
-                <v-list-item href="/collections">
-                    <v-list-item-icon>
-                        <v-icon>mdi-file-cabinet</v-icon>
-                    </v-list-item-icon>
-                    <v-list-item-title>Collections</v-list-item-title>
-                </v-list-item>
-                <v-list-item href="/samples">
-                    <v-list-item-icon>
-                        <v-icon>mdi-test-tube</v-icon>
-                    </v-list-item-icon>
-                    <v-list-item-title>Samples</v-list-item-title>
-                </v-list-item>
-                 <v-divider></v-divider>
-                <v-list-item href="/templates">
+
+                <v-divider></v-divider>
+                <v-list-item>
                     <v-list-item-icon>
                         <v-icon>mdi-cog</v-icon>
                     </v-list-item-icon>
-                    <v-list-item-title>Templates</v-list-item-title>
+                    <v-list-item-title>Settings</v-list-item-title>
                 </v-list-item>
+
             </v-list-item-group>
         </v-list>
     </v-navigation-drawer>
@@ -128,7 +85,7 @@
     <v-footer padless>
         <v-container fluid>
             <div class="pt-0 text-center">
-                &copy; {{'{{ new Date().getFullYear() }}'}} — <strong>Metahub</strong> <em>by KIK-IRPA</em>
+                &copy; {{'{{ new Date().getFullYear() }}'}} — <strong>E-RIHS</strong>
             </div>
         </v-container>
     </v-footer>
