Fix basic project form

--- a/src/templates/base.html.jinja
+++ b/src/templates/base.html.jinja
@@ -21,7 +21,7 @@
 
     <v-app-bar color="white" class="px-10">
         <a href="/">
-            <img height="45" src="/static/images/logo.svg" alt="Metahub" />
+            <img height="45" src="/static/images/logo.svg" alt="Access-DS" />
         </a>
         <v-spacer></v-spacer>
 
