--- a/src/templates/project_form.html.jinja
+++ b/src/templates/project_form.html.jinja
@@ -7,8 +7,6 @@
     
     <link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
     <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
-
-    <script src="/static/js/v-jsoneditor.min.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/@koumoul/vjsf@2.18.2/dist/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@koumoul/vjsf@2.18.2/dist/third-party.js"></script>
@@ -18,10 +16,15 @@
 {% block content %}
     <v-banner color="primary" class="elevation-5 px-10">
         <span 
-            v-html="title"
             class="white--text 
             text-h4 
-            px-10"></span>
+            px-10">
+            Project: 
+            <span 
+                v-if="instance.title"
+                v-html="instance.title"></span>
+            <span v-else>(untitled)</span>
+        </span>
     </v-banner>
 
     <v-container>
@@ -147,9 +150,8 @@
 
 {% block script %}
     <script type="text/javascript">
-        const title = '{{ title }}'
         const schema = '{{ schema | safe }}'
-        const initialId = '{{ id }}'
+        const instance = '{{ instance | safe }}'
 
         const formOptions =  { 
             "locale": "en-gb", 
@@ -179,11 +181,8 @@
             data: {
                 appBarDropdown: false,
 
-                title: title,
-
-                id: initialId,
                 schema: JSON.parse(schema),
-                instance: {},
+                instance: JSON.parse(instance),
 
                 formOptions: formOptions,
                 isValid: null,
